# app_settings

./: README.md  __init__.py  requirements.txt  setup.cfg  tox.ini
src/app_settings/: __init__.py  app_settings.py  defaults_dict.py
src/app_settings_dict/: app_settings_dict.py  defaults_dict.py
tests/: test_app_settings.py  test_app_settings_dict.py  test_defaults_dict.py
