[metadata]
name = App Settings
description = A dictionary to manage settings for apps.
author = Chris Wheeler
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.7
    Programming Language :: Python :: 3 :: 3.8
    Programming Language :: Python :: 3 :: 3.9
    Programming Language :: Python :: 3 :: 3.10

[options]
packages = 
    app_settings
python_requires = >=3.7
package_dir =
    =src
zip_safe = no
