[metadata]
name = App Settings
description = A dictionary to manage settings for apps.
author = Chris Wheeler
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.7
    Programming Language :: Python :: 3 :: 3.8
    Programming Language :: Python :: 3 :: 3.9
    Programming Language :: Python :: 3 :: 3.10

[options]
packages = 
    app_settings
install_requires = 
    PyYAML
    typing_extensions
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest
    pytest-cov
    tox

[options.package_data]
app_settings = py.typed
