[metadata]
name = app-settings-dict
url = https://github.com/wheelercj/app_settings
version = 0.1.3
description = A dictionary to manage settings for apps.
long_description = file: README.md
long_description_content_type = text/markdown
author = Chris Wheeler
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = 
    app_settings
install_requires = 
    PyYAML
    typing_extensions
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest
    pytest-cov
    tox

[options.package_data]
app_settings = py.typed
